--- a/App/templates/cliente/index_cliente_logueado.html
+++ b/App/templates/cliente/index_cliente_logueado.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Inicio</title>
     <style>
-        .contorno{
+        .contorno {
             padding-top: 20px;
             width: 270px;
             padding-left: 22px;
         }
-    
-        .card-content{
+        
+        .card-content {
             border: transparent;
             border-radius: 20px;
             padding: 10px;
             background-color: #18BC9C;
         }
-
-        .cliqueable{
-            display:block;
-            margin:auto;
-            border:none;
+        
+        .cliqueable {
+            display: block;
+            margin: auto;
+            border: none;
             background-color: transparent;
         }
-
-        .card-img{
+        
+        .card-img {
             text-align: center;
         }
-
-        .nombre{
+        
+        .nombre {
             text-align: center;
             height: 80px;
         }
-
-        .precio{
-            font-size: 18px; 
-            overflow:hidden;
-            white-space:nowrap;
+        
+        .precio {
+            font-size: 18px;
+            overflow: hidden;
+            white-space: nowrap;
             text-overflow: ellipsis;
             text-align: center;
         }
-
-        .comprar{
+        
+        .comprar {
             display: flex;
             justify-content: center;
         }
-
-        .btn-comprar{
-            display:block;
-            margin:auto;
-            border:none;
+        
+        .btn-comprar {
+            display: block;
+            margin: auto;
+            border: none;
             border-radius: 20px;
             background-color: white;
             font-size: 20px;
             width: 200px;
         }
-        .buscar{
+        
+        .buscar {
             display: inline;
-            border:none;
+            border: none;
             padding-top: 20px;
             text-align: right;
         }
-        .boton-buscar{
+        
+        .boton-buscar {
             border: none;
         }
     </style>
@@ -74,11 +77,11 @@
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_usuario_logueado.html' %}
-            <div style="padding-top: 80px;padding-right: 20px;">
+            <div style="padding-top: 15px;padding-right: 20px;">
                 <div class="buscar">
                     <form action="buscarProducto" method="POST">
-                            <input type="text" name="palabra" id="palabra" placeholder="Buscar...">
-                            <button class="boton-buscar" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                        <input type="text" name="palabra" id="palabra" placeholder="Buscar...">
+                        <button class="boton-buscar" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                     </form>
                 </div>
             </div>
@@ -123,28 +126,27 @@
                                             <div style="color: red;text-align: center;" class="btn-comprar">SIN STOCK</div>
                                         </div>
                                     </div>
-                                    {%endif%} 
-                                    {% if dato[8] != 0 %}
-                                        <div class="comprar">
-                                            <form action="agregarAlCarrito" method="POST">
-                                                <div style="padding: 0px;padding-top: 2px;" class="form-group">
+                                    {%endif%} {% if dato[8] != 0 %}
+                                    <div class="comprar">
+                                        <form action="agregarAlCarrito" method="POST">
+                                            <div style="padding: 0px;padding-top: 2px;" class="form-group">
                                                 <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
                                                 <button class="btn-comprar" type="submit">COMPRAR</button>
                                                 <!-- <button style="display:block;margin:auto;border:none;background-color: transparent;font-size: 30px;" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i></button> -->
-                                                </div>
-                                            </form>
-                                        </div>
+                                            </div>
+                                        </form>
+                                    </div>
                                     {%endif%}
-                                 </div>
+                                </div>
                             </div>
                         </div>
                         {%endfor%}
                     </div>
                 </div>
-            </section> 
+            </section>
         </div>
     </div>
-    {% include 'footer/footer.html' %} 
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
