Ocultar Boton de Facebook y reemplazar iconos viejos por boton google

--- a/App/templates/login/login_redes.html
+++ b/App/templates/login/login_redes.html
@@ -35,9 +35,9 @@
                             </div>-->
                         <div class="row">
                             <div class="col-md-6">
-                                <button id="btnFacebookSingIn" class="btn btn-md btn-primary">
+                                <!--    <button id="btnFacebookSingIn" class="btn btn-md btn-primary">
                              <i class="fab fa-facebook-square"></i> Facebook
-                        </button>
+                        </button>-->
                                 <button id="btnGoogleSingIn" class="btn btn-md btn-primary"> 
                             <i class="fab fa-google"></i> Google
                         </button> Si activo redirect de sesion <br>[PRIMERO loeguese con google y luego vuelva a inicio ]-->
