--- a/App/templates/login/loginandrea.html
+++ b/App/templates/login/loginandrea.html
@@ -159,9 +159,9 @@
                     <button id="btnGoogleSingIn" class="btn btn-md btn-primary"> 
                 <i class="fab fa-google"></i> Google
             </button>
-                    <button id="btnFacebookSingIn" class="btn btn-md btn-primary">
+                    <!-- <button id="btnFacebookSingIn" class="btn btn-md btn-primary">
                 <i class="fab fa-facebook-square"></i> Facebook
-            </button>
+            </button>-->
                 </div>
 
                 <div class="texto2">
