--- a/App/templates/usuario/crearUsuarioPorUsuario.html
+++ b/App/templates/usuario/crearUsuarioPorUsuario.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
-<head>
+<!--<head>
     <style>
         .container {
             width: 400px;
@@ -13,7 +13,7 @@
             text-align: center;
         }
     </style>
-</head>
+</head>-->
 
 <body>
     <div class="d-flex" id="wrapper">
