Revicion se secion, despues del regitro puede iniciar con la cunta o por red social

--- a/App/templates/usuario/usuarioGuardadoPorUsuario.html
+++ b/App/templates/usuario/usuarioGuardadoPorUsuario.html
@@ -2,7 +2,11 @@
 <html lang="es">
 
 <head>
-    <title>Acceso</title>
+    <title>e-Shop Acceso</title>
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/fontawesome/css/all.min.css') }}">
+    <!-- Fontawesome -->
+    <script src="{{ url_for('static', filename='lib/fontawesome/js/all.min.js') }}"></script>
     <style>
         .fondo {
             /* background-image: url("https://seoymedia.com/sites/default/files/portada_puntoofertas.jpg");
@@ -93,6 +97,7 @@
             text-align: center;
             font-size: 30px;
             margin-top: 70px;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
         
         .mensaje2 {
@@ -101,13 +106,14 @@
             text-align: center;
             font-size: 20px;
             margin-top: 10px;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     </style>
 </head>
 
 <body class="fondo">
     <div class="mensaje1">Te has registrado con éxito</div>
-    <div class="mensaje2">Ahora puedes ingresar</div>
+    <div class="mensaje2">Ahora puedes ingresar.</div>
     <div class="cuadrado">
         <div class="formulario">
             <form action="loginAndrea" method="POST" class="p1">
@@ -160,6 +166,18 @@
             <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
             <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
             <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+            <script>
+                window.onload = function() {
+                    try {
+                        //CosultarUsuarioBackend('{{ data }}'); //nombre de usuario de registro
+                        //ES CONTROLADO POR EL ONChange 
+
+                    } catch (error) {
+                        console.log(error);
+
+                    }
+                };
+            </script>
 </body>
 
 </html>
