Eliminacion de comentario en guardar usuario y eliminacio de codigo no usado

--- a/App/templates/usuario/usuarioGuardadoPorUsuario.html
+++ b/App/templates/usuario/usuarioGuardadoPorUsuario.html
@@ -166,7 +166,7 @@
             <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
             <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
             <script src="{{ url_for('static', filename='js/login.js') }}"></script>
-            <script>
+            <!--<script>
                 window.onload = function() {
                     try {
                         //CosultarUsuarioBackend('{{ data }}'); //nombre de usuario de registro
@@ -177,7 +177,7 @@
 
                     }
                 };
-            </script>
+            </script>-->
 </body>
 
 </html>
