Correccion carga de imagen Sidebar

--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -1,42 +1,43 @@
 <!-- Sidebar -->
 
 <style>
-    *{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
-    color: gray;
-    }
-                  
-    li{
-    list-style-type:none;
-    position: relative;
-    width:150px;
-    }
-                
-    li a{
-    text-decoration:none;
-    display:inline-block;
-    padding:15px 20px;
-    width:170px;
-    height:40px;
-    color: gray;
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        color: gray;
     }
     
-    nav li ul{
-        display:none;
-        position:absolute;
-        top:0px;
-        left:130px;
+    li {
+        list-style-type: none;
+        position: relative;
+        width: 150px;
     }
-            
-    nav li:hover ul{display:block;}
-
+    
+    li a {
+        text-decoration: none;
+        display: inline-block;
+        padding: 15px 20px;
+        width: 170px;
+        height: 40px;
+        color: gray;
+    }
+    
+    nav li ul {
+        display: none;
+        position: absolute;
+        top: 0px;
+        left: 130px;
+    }
+    
+    nav li:hover ul {
+        display: block;
+    }
 </style>
 <div class="bg-light border-right" id="sidebar-wrapper">
     <!--<div class="sidebar-heading">Start Bootstrap </div>-->
     <!-- <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a> -->
-    <a href="/"> <img src="..\static\img\banner.png" height="58px"> </a>
+    <a href="/"> <img src="{{ url_for('static', filename='img/banner.png') }}" height="58px"> </a>
     <div class="list-group list-group-flush">
         <a href="{{ url_for('usuarioABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Usuarios <i class="fas fa-angle-right"></i> </a>
         <a href="{{ url_for('tipoProductoABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-laptop"></i> Tipos de Productos <i class="fas fa-angle-right"></i></a>
@@ -63,7 +64,7 @@
         <a href="{{ url_for('ventas') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Ventas <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('manual_vendedor') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-book"></i> Manual de usuario <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('administracion') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cog"></i> Administración <i class="fas fa-angle-right"></i></a>
-        
+
         <!-- <nav>
             <ul>
                 <li style="height: 150px;"><a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Configuración <i class="fas fa-angle-right"></i></a>
