--- a/App/templates/ejemplar/altaEjemplar.html
+++ b/App/templates/ejemplar/altaEjemplar.html
@@ -5,8 +5,8 @@
 <body>
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar.html' %}
-
         <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2" style="margin-top: 70px;">
                 <h2>Alta ejemplar</h2>
                 <form action="{{ url_for('guardarEjemplar')}}" method="POST">
