--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -1,6 +1,6 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
     <!-- <a style="height: 50px;margin-top: 10px;" class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a> -->
-    <a href="/"> <img src="..\static\img\banner.png" height="58px"> </a>
+    <a href="/"> <img src="{{ url_for('static', filename='img/banner.png') }}" height="58px"> </a>
     <div class="list-group list-group-flush">
         <a href="{{ url_for('index') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio</a>
         <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías </a>
@@ -8,8 +8,8 @@
         <a href="{{ url_for('listarCombo') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos </a>
         <a href="{{ url_for('misCompras') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-credit-card"></i> Mis compras </a>
         <a href="{{ url_for('manual_comprador') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-book"></i> Manual de usuario</a>
-        <a href="{{ url_for('preguntas_frecuentes') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-question"></i> Preguntas frecuentes</a> 
-        <a href="{{ url_for('contacto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-phone-alt"></i> Contacto </a> 
-              
+        <a href="{{ url_for('preguntas_frecuentes') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-question"></i> Preguntas frecuentes</a>
+        <a href="{{ url_for('contacto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-phone-alt"></i> Contacto </a>
+
     </div>
 </div>
