--- a/App/templates/navbars/navbar_admin_horizontal.html
+++ b/App/templates/navbars/navbar_admin_horizontal.html
@@ -7,9 +7,9 @@
     }
 </style>
 
-		<ul class="menu">
-			<li style="width: 50px;"><a style="width: 50px;" href="salir"><i class="fas fa-sign-out-alt"></i></a></li>
-            <li style="width: 50px;"><a style="width: 50px;" href="miCuenta_admin"><i class='fas fa-user'></i></a></li>
-        </ul>
+<ul class="menu">
+    <li style="width: 50px;"><a style="width: 50px;" href="{{ url_for('salir') }}"><i class="fas fa-sign-out-alt"></i></a></li>
+    <li style="width: 50px;"><a style="width: 50px;" href="{{ url_for('miCuenta_admin') }}"><i class='fas fa-user'></i></a></li>
+</ul>
 
 {% include 'sesion/sesion.html' %}
