--- a/App/templates/navbars/navbar_nologueado.html
+++ b/App/templates/navbars/navbar_nologueado.html
@@ -1,20 +1,21 @@
 <style>
-    .btn-danger{
+    .btn-danger {
         background-color: white;
         border-color: white;
         color: black;
-        float:right;
-        position:absolute;  
-        right:0;
+        float: right;
+        position: absolute;
+        right: 0;
         margin-right: 15px;
     }
-    .navbar-text{
+    
+    .navbar-text {
         height: 50px;
     }
 </style>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark p-1">
     <span class="navbar-text">
-        <a href="/iniciarSesion"><button class="btn btn-danger">Ingresar</button></a>
+        <a href="{{ url_for('iniciarSesion') }}"><button class="btn btn-danger">Ingresar</button></a>
     </span>
 </nav>
 {% include 'sesion/sesion.html' %}
