--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -5,7 +5,7 @@
         box-sizing: border-box;
         margin: 0;
         padding: 0;
-        color: gray;
+        /*color: gray;*/
     }
     
     li {
