--- a/App/templates/navbars/navbar_usuario_logueado.html
+++ b/App/templates/navbars/navbar_usuario_logueado.html
@@ -42,7 +42,7 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="mostrarCarrito"><i style="font-size: 30px;" class='fa fa-shopping-cart'></i></a>
+            <a class="nav-link " href="{{ url_for('mostrarCarrito') }}"><i style="font-size: 30px;" class='fa fa-shopping-cart'></i></a>
         </li>
     </ul>
 </nav>
