Correccion mostrarComboAlUsuario: correccion de navbar y Footer

--- a/App/templates/navbars/navbar_admin_horizontal.html
+++ b/App/templates/navbars/navbar_admin_horizontal.html
@@ -15,7 +15,7 @@
 </ul>
 -->
 <nav class="menuUsuario  navbar navbar-expand-lg navbar-light bg-dark p-1 justify-content-end">
-    <ul class="navbar-nav  my-2 my-lg-0">
+    <ul class="navbar-nav  my-2 my-lg-0 ustify-content-end">
         <li class="nav-item dropdown mr-sm-4"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i style="font-size: 30px;" class="fas fa-user"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{{ url_for('miCuenta_admin') }}">Mi cuenta</a>
