--- a/App/templates/combo/mostrarComboAlUsuario.html
+++ b/App/templates/combo/mostrarComboAlUsuario.html
@@ -3,19 +3,22 @@
 {% include 'header/header.html' %}
 
 <style>
-    .btn-success{
-    font-size: 24px;
-    padding: 1px;
+    .btn-success {
+        font-size: 24px;
+        padding: 1px;
     }
-    .btn-comprar{
+    
+    .btn-comprar {
         background-color: transparent;
         border: none;
     }
-    .btn-danger{
+    
+    .btn-danger {
         margin-top: 15px;
         margin-left: 10px;
     }
-    h2{
+    
+    h2 {
         margin-top: 30px;
     }
 </style>
@@ -24,9 +27,10 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
+            {% include 'navbars/navbar_usuario_logueado.html' %}
             <div class="container p-2">
                 <a class="btn btn-danger" href="/listarCombo" role="button">Volver</a>
-                <center>        
+                <center>
                     <h2>{{dato['nombreCombo']}}</h2>
                     <div class="form-group">
                         <input readonly value="{{dato['nombreCombo']}}" type="hidden" class="form-control" name="nombreCombo" id="nombreCombo" placeholder="Nombre del combo">
@@ -78,7 +82,7 @@
             </div>
         </div>
     </div>
-    {% include 'footer/footer-usuario.html' %}
+    {% include 'footer/footer.html' %}
 </body>
 
 
